[package]
name = "zeropool-bn"
version = "0.5.8"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/zcash/bn"
repository = "https://github.com/zcash/bn"
license = "MIT OR Apache-2.0"

[features]
default = ["borsh"]

[[bench]]
name = "api"

[dependencies]
rand = { version = "0.5", features = ["i128_support"], default-features = false }
byteorder = { version = "1.0", features = ["i128"], default-features = false }
crunchy = "0.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
rustc-hex = { version = "2", default-features = false }
borsh = {version = "0.8.1", optional = true}


[dev-dependencies]
rand = { version = "0.5", features = ["i128_support"] }
seq-macro = "0.1.5"
